--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <div class="main">
         <div id="time" class="time">12:00</div>
         <div class="greeting">Hello! Heejun</div>
-        <div class="todo">루틴만들기</div>
+        <div class="todo">Make your own routine</div>
     </div>
     <div class="quote">
         <div id="author" class="author">- 명언의 저자 -</div>
